# slam_project

./: Homework2_Answers.md  README.md  SLAM_RESULTS.md  nuturtle.rosinstall
nuslam/: CMakeLists.txt  README.md  frames.gv  package.xml
nuslam/config/: frames.gv  landmarks.rviz  slam.rviz  slam_params.yaml  slam_params.yaml.save  slam_params.yaml.save.1
nuslam/include/: ekf.hpp
nuslam/include/nuslam/: nuslam.hpp
nuslam/launch/: landmarks.launch  movement.launch  slam.launch  view_diff_drive_slam.launch
nuslam/msg/: test.msg  turtle_map.msg
nuslam/src/: analysis.cpp  draw_map.cpp  gazebo_visual.cpp  landmarks.cpp  nuslam.cpp  slam.cpp  slam_class.cpp  slam_old.cpp  test.cpp
nuslam/test/: circle_tester.cpp  circle_tester_backup.cpp  test_circle.test
nuturtle_description/: CMakeLists.txt  README.md  package.xml
nuturtle_description/config/: diff_params.yaml  urdf.rviz
nuturtle_description/launch/: view_diff_drive.launch
nuturtle_description/urdf/: diff_drive.urdf  diff_drive.urdf.xacro  rrrobot.xacro
nuturtle_gazebo/: CMakeLists.txt  README.MD  package.xml
nuturtle_gazebo/config/: gazebo_params.yaml  waypoints_gazebo.rviz
nuturtle_gazebo/launch/: diff_drive_gazebo.launch  gazebo_waypoints.launch
nuturtle_gazebo/src/: angular.cpp  landmarks.cpp  old_land.cpp  test.cpp  turtle_drive_plugin.cpp
nuturtle_gazebo/urdf/: diff_drive.gazebo.xacro
nuturtle_gazebo/worlds/: emp.world
nuturtle_robot/: CMakeLists.txt  Homework2_Answers.md  README.md  package.xml
nuturtle_robot/config/: nubot_params.yaml
nuturtle_robot/launch/: basic_remote.launch  follow_waypoints.launch  test.launch  test_movement.launch
nuturtle_robot/src/: markers.cpp  real_waypoint.cpp  rotation.cpp  translation.cpp  turtle_interface.cpp
nuturtle_robot/srv/: which_way.srv
nuturtle_robot/test/: test.test  turtle_interface.test  turtle_interface_test.cpp
rigid2d/: CMakeLists.txt  C_0002_answers.md  README.md  main.cpp  out.txt  package.xml  package.xml.save  rigid2d.cpp  rigid2d.hpp  rigid2d_test  test1_input.txt  test_compile.bash
rigid2d/include/rigid2d/: diff_drive.hpp  rigid2d.hpp  waypoints.hpp
rigid2d/src/: diff_drive.cpp  fake_diff_encoder.cpp  odometer.cpp  rigid2d.cpp  rigid2d_node.cpp  waypoints.cpp
rigid2d/test/: test.cpp
tsim/: CMakeLists.txt  README.md  SLAM_RESULTS.md  package.xml
tsim/config/: turtle_params.yaml  waypoint_x.yaml  waypoint_y.yaml
tsim/launch/: trect.launch  turtle_odom.launch  turtle_pent.launch
tsim/msg/: PoseError.msg
tsim/src/: test.cpp  traj_reset.cpp  turtle_rect.cpp  turtle_way.cpp
