<?xml version="1.0"?>
<package format="2">
  <name>nuturtle_gazebo</name>
  <version>0.0.0</version>
  <description>The nuturtle_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="vishwajeet@u.northwestern.edu">vishwajeet</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
 <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo</build_depend>
   <build_depend>rigid2d</build_depend>
  <depend>std_msgs</depend>
  <build_depend>tf</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rigid2d</exec_depend> 
 <exec_depend>message_runtime</exec_depend> 
 <exec_depend>gazebo_ros</exec_depend>
<build_export_depend>rigid2d</build_export_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  <gazebo_ros plugin_path = "${prefix}/../../lib" gazebo_media_path="${prefix}"/> 
  </export>
</package>
